--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.12.3",
     "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
     "queryize": "^2.1.0",
     "swagger-express-mw": "^0.7.0",
-    "swagger-tools": "^0.10.4"
+    "swagger-tools": "^0.10.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "should": "^7.1.0",
