--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "crypto-browserify": "^3.12.0",
     "express": "^4.12.3",
     "jsonwebtoken": "^8.4.0",
+    "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
     "mysql": "^2.16.0",
     "queryize": "^2.1.0",
     "swagger-express-mw": "^0.7.0",
