--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "aws-sdk": "^2.542.0",
+    "babel-register": "^6.26.0",
+    "buffer": "^5.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
+    "esm": "^3.2.25",
     "express": "^4.12.3",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "mysql": "^2.16.0",
     "queryize": "^2.1.0",
+    "regenerator-runtime": "^0.13.2",
+    "shh": "^0.3.3",
     "swagger-express-mw": "^0.7.0",
     "swagger-tools": "^0.10.4",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
     "should": "^7.1.0",
     "supertest": "^1.0.0"
   },
