--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "esm": "^3.2.25",
     "express": "^4.12.3",
     "fb": "^2.0.0",
+    "google-auth-library": "^5.4.0",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
